--- a/index.html
+++ b/index.html
@@ -1,142 +1,153 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Rainbow Staves</title>
-  </head>
-  <body>
-    <h2>Rainbow Staves</h2>
-    <p id="status">Rainbow Stave is loading...</p>
-    <div>
-      <div class="inputoutput">
-        <canvas id="canvasOutput"></canvas>
-        <img id="imageSrc" alt="" />
-        <div class="caption">
-          Sheet Music file to Colourize ->
-          <input type="file" id="fileInput" name="file" />
-        </div>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Rainbow Staves</title>
+</head>
+
+<body>
+  <h2>Rainbow Staves</h2>
+  <p id="status">Rainbow Stave is loading...</p>
+  <div>
+    <div class="inputoutput">
+      <canvas id="canvasOutput"></canvas>
+      <img id="imageSrc" alt="" />
+      <div class="caption">
+        Sheet Music file to Colourize ->
+        <input type="file" id="fileInput" name="file" />
       </div>
     </div>
-    <script type="text/javascript">
-      let imgElement = document.getElementById('imageSrc');
-      let inputElement = document.getElementById('fileInput');
-      inputElement.addEventListener(
-        'change',
-        (e) => {
-          imgElement.src = URL.createObjectURL(e.target.files[0]);
-        },
-        false
+  </div>
+  <script type="text/javascript">
+    //TODO:
+    // SORT (cnts, boundingBoxes) = sort_contours(cnts, method="top-to-bottom")
+    // REMOVE HORIZONTAL LINES THAT ARE TOO SHORT (ONLY USE THE LONG ONES)
+    // SAVE OPTIONS
+    // use PDF's
+
+    let imgElement = document.getElementById('imageSrc');
+    let inputElement = document.getElementById('fileInput');
+    inputElement.addEventListener(
+      'change',
+      (e) => {
+        imgElement.src = URL.createObjectURL(e.target.files[0]);
+      },
+      false
+    );
+
+    function sortStaves() {
+      //     if method == "top-to-bottom" or method == "bottom-to-top":
+      //     i = 1
+      //     # construct the list of bounding boxes and sort them from top to
+      //     # bottom
+      //     boundingBoxes = [cv2.boundingRect(c) for c in cnts]
+      //     (cnts, boundingBoxes) = zip(* sorted(zip(cnts, boundingBoxes),
+      //       key = lambda b: b[1][i], reverse = reverse))
+      //     # return the list of sorted contours and bounding boxes
+      //     return (cnts, boundingBoxes)
+
+    }
+    function myCode() {
+      let src = cv.imread(imgElement);
+      let dst = cv.Mat.zeros(src.rows, src.cols, cv.CV_8UC4);
+      src.copyTo(dst);
+
+      gray = new cv.Mat();
+      cv.cvtColor(src, gray, cv.COLOR_BGR2GRAY, 0);
+
+      thresh = new cv.Mat();
+      cv.threshold(
+        gray,
+        thresh,
+        0,
+        255,
+        cv.THRESH_BINARY_INV + cv.THRESH_OTSU
+      )[1];
+
+      let horizontal_kernel = cv.Mat.ones(1, 40, cv.CV_8U);
+      let anchor = new cv.Point(-1, -1);
+
+      detect_horizontal = new cv.Mat();
+      cv.morphologyEx(
+        thresh,
+        detect_horizontal,
+        cv.MORPH_OPEN,
+        horizontal_kernel,
+        anchor,
+        2
       );
 
-      function myCode() {
-        let src = cv.imread(imgElement);
-        let dst = cv.Mat.zeros(src.rows, src.cols, cv.CV_8UC4);
-        src.copyTo(dst);
+      let contours = new cv.MatVector();
+      let hierarchy = new cv.Mat();
 
-        gray = new cv.Mat();
-        cv.cvtColor(src, gray, cv.COLOR_BGR2GRAY, 0);
+      cv.findContours(
+        detect_horizontal,
+        contours,
+        hierarchy,
+        cv.RETR_EXTERNAL,
+        cv.CHAIN_APPROX_SIMPLE
+      );
 
-        thresh = new cv.Mat();
-        cv.threshold(
-          gray,
-          thresh,
-          0,
-          255,
-          cv.THRESH_BINARY_INV + cv.THRESH_OTSU
-        )[1];
+      const colours = [
+        [87, 80, 245, 255],
+        [231, 177, 237, 255],
+        [220, 74, 67, 255],
+        [180, 216, 165, 255],
+        [100, 230, 223, 255],
+        [60, 172, 252, 255],
+        [87, 80, 245, 255],
+        [204, 95, 213, 255],
+        [220, 74, 67, 255],
+        [180, 216, 165, 255],
+      ];
 
-        let horizontal_kernel = cv.Mat.ones(1, 40, cv.CV_8U);
-        let anchor = new cv.Point(-1, -1);
-
-        detect_horizontal = new cv.Mat();
-        cv.morphologyEx(
-          thresh,
-          detect_horizontal,
-          cv.MORPH_OPEN,
-          horizontal_kernel,
-          anchor,
-          2
-        );
-
-        let contours = new cv.MatVector();
-        let hierarchy = new cv.Mat();
-
-        cv.findContours(
-          detect_horizontal,
-          contours,
-          hierarchy,
-          cv.RETR_EXTERNAL,
-          cv.CHAIN_APPROX_SIMPLE
-        );
-
-        //TODO:
-        // SORT (cnts, boundingBoxes) = sort_contours(cnts, method="top-to-bottom")
-        // REMOVE HORIZONTAL LINES THAT ARE TOO SHORT (ONLY USE THE LONG ONES)
-        // SAVE OPTIONS
-        // use PDF's
-        const colours = [
-          [87, 80, 245, 255],
-          [231, 177, 237, 255],
-          [220, 74, 67, 255],
-          [180, 216, 165, 255],
-          [100, 230, 223, 255],
-          [60, 172, 252, 255],
-          [87, 80, 245, 255],
-          [204, 95, 213, 255],
-          [220, 74, 67, 255],
-          [180, 216, 165, 255],
-        ];
-
-        // draw contours
-        let colour_idx = 0;
-        for (let i = 0; i < contours.size(); ++i) {
-          let colour = colours[colour_idx];
-          colour_idx = colour_idx + 1;
-          if (colour_idx == colours.length) {
-            colour_idx = 0;
-          }
-          cv.drawContours(
-            src,
-            contours,
-            i,
-            colour,
-            1,
-            cv.LINE_8,
-            hierarchy,
-            100
-          );
+      // draw contours
+      let colour_idx = 0;
+      for (let i = 0; i < contours.size(); ++i) {
+        let colour = colours[colour_idx];
+        colour_idx = colour_idx + 1;
+        if (colour_idx == colours.length) {
+          colour_idx = 0;
         }
-
-        cv.imshow('canvasOutput', src);
-
-        // edge_kernel = np.array([[ 0.0, -1, 0],
-        //                         [ -1, 4, -1],
-        //                         [ 0, -1, 0]], dtype=np.uint8)
-        // detect_edge = cv2.morphologyEx(thresh, cv2.MORPH_OPEN, edge_kernel, iterations=2)
-        // cnts = cv2.findContours(detect_edge, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)
-        // cnts = cnts[0] if len(cnts) == 2 else cnts[1]
-        // for c in cnts:
-        //     cv2.fillPoly(result, [c], (0,0,0))
-
-        //
-        src.delete();
-        dst.delete();
-        hierarchy.delete();
-        contours.delete();
+        cv.drawContours(
+          src,
+          contours,
+          i,
+          colour,
+          1,
+          cv.LINE_8,
+          hierarchy,
+          100
+        );
       }
-      imgElement.onload = function () {
-        myCode();
-      };
-      function onOpenCvReady() {
-        document.getElementById('status').innerHTML =
-          'Rainbow Stave is ready. Please click on the "Choose file" button to select your sheet music file on your computer.';
-      }
-    </script>
-    <script
-      async
-      src="opencv.js"
-      onload="onOpenCvReady();"
-      type="text/javascript"
-    ></script>
-  </body>
+
+      cv.imshow('canvasOutput', src);
+
+      // edge_kernel = np.array([[ 0.0, -1, 0],
+      //                         [ -1, 4, -1],
+      //                         [ 0, -1, 0]], dtype=np.uint8)
+      // detect_edge = cv2.morphologyEx(thresh, cv2.MORPH_OPEN, edge_kernel, iterations=2)
+      // cnts = cv2.findContours(detect_edge, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)
+      // cnts = cnts[0] if len(cnts) == 2 else cnts[1]
+      // for c in cnts:
+      //     cv2.fillPoly(result, [c], (0,0,0))
+
+      //
+      src.delete();
+      dst.delete();
+      hierarchy.delete();
+      contours.delete();
+    }
+    imgElement.onload = function () {
+      myCode();
+    };
+    function onOpenCvReady() {
+      document.getElementById('status').innerHTML =
+        'Rainbow Stave is ready. Please click on the "Choose file" button to select your sheet music file on your computer.';
+    }
+  </script>
+  <script async src="https://docs.opencv.org/3.4/opencv.js" onload="onOpenCvReady();" type="text/javascript"></script>
+</body>
+
 </html>
