--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     }
 
     function myCode() {
-      let gray = cv.imread('wholenote', 0)
+      let wholeNote = cv.imread('wholenote')
 
       let src = cv.imread(imgElement);
       let dst = cv.Mat.zeros(src.rows, src.cols, cv.CV_8UC4);
@@ -140,47 +140,34 @@
       //                         [ -1, 4, -1],
       //                         [ 0, -1, 0]], dtype=np.uint8)
 
-      let threshed = new cv.Mat();
-      cv.threshold(
-        gray,
-        threshed,
-        100,
-        255,
-        cv.THRESH_BINARY_INV | cv.THRESH_OTSU)
+      console.info('1')
+      let mask = new cv.Mat()
+      let dst2 = new cv.Mat()
 
-      let edge_contours = new cv.MatVector();
-      cv.findContours(
-        threshed,
-        edge_contours,
-        cv.RETR_LIST,
-        cv.CHAIN_APPROX_SIMPLE)[-2]
 
-      // edge_kernel = cv.matFromArray(3, 3, cv.CV_8U,
-      //   [
-      //     [0.0, -1, 0],
-      //     [- 1, 4, -1],
-      //     [0, -1, 0]
-      //   ])
-      // const edge_anchor = new cv.Point(1, 1);
+      console.info('2')
 
-      // detect_edge = new cv.Mat()
-      // cv.morphologyEx(
-      //   thresh,
-      //   detect_edge,
-      //   cv.MORPH_OPEN,
-      //   edge_kernel,
-      //   edge_anchor,
-      //   2)
+      let threshold = 0.95
+      result = 1
+      counter = 0
+      while (result > threshold && counter < 20) {
+        counter = counter + 1
+        cv.matchTemplate(
+          src,
+          wholeNote,
+          dst2,
+          cv.TM_CCOEFF,
+          mask
+        )
 
-      // let edge_contours = new cv.MatVector();
-      // let edge_hierarchy = new cv.Mat();
-      // cv.findContours(
-      //   detect_edge,
-      //   edge_contours,
-      //   edge_hierarchy,
-      //   cv.RETR_EXTERNAL,
-      //   cv.CHAIN_APPROX_SIMPLE)
+        let result = cv.minMaxLoc(dst2, mask)
+        console.info(`result ${JSON.stringify(result)}`)
+        let maxPoint = result.maxLoc
+        let point = new cv.Point(maxPoint.x + wholeNote.cols, maxPoint.y + wholeNote.rows)
+        cv.rectangle(src, maxPoint, point, new cv.Scalar(255, 0, 0, 255), cv.FILLED, cv.LINE_8, 0)
+      }
 
+      console.info('3')
 
       // draw contours
       let colour_idx = 0;
@@ -200,16 +187,6 @@
             colour,
             1)
         }
-      }
-
-      // cnts = cnts[0] if len(cnts) == 2 else cnts[1]
-      for (let i = 0; i < edge_contours.size(); i++) {
-        const rect = cv.boundingRect(edge_contours.get(i));
-        cv.rectangle(src,
-          new cv.Point(rect.x, rect.y),
-          new cv.Point(rect.x + rect.width, rect.y + rect.height),
-          [0, 255, 0, 255],
-          1)
       }
 
       cv.imshow('canvasOutput', src);
