--- a/index.html
+++ b/index.html
@@ -168,9 +168,10 @@
 
       let dst2 = new cv.Mat();
 
+      let notePositions = []
 
       console.log('3')
-      while (counter < 20) {// && max_val > threshold) { // && counter < 20) {
+      while (counter < 5) {// && max_val > threshold) { // && counter < 20) {
         counter = counter + 1
 
         console.log('4')
@@ -192,13 +193,49 @@
         // if (max_val > threshold) {
         let maxPoint = result.maxLoc
         let point = new cv.Point(maxPoint.x + wholeNote.cols, maxPoint.y + wholeNote.rows)
+
+        notePositions.push({ x: maxPoint.x, y: maxPoint.y, width: wholeNote.cols, height: wholeNote.rows });
+
         cv.rectangle(gray, maxPoint, point, new cv.Scalar(255, 0, 0, 255), cv.FILLED, cv.LINE_8, 0)
         cv.rectangle(src, maxPoint, point, new cv.Scalar(255, 0, 0, 255), 3, cv.LINE_8, 0)
         // }
         console.log('6')
       }
 
-      //TODO: Store the rectangles above
+      const originalSortedContours = sortedContours
+      console.log(`originalSortedContours ${originalSortedContours.length}`)
+
+      for (pos in notePositions) {
+        const noteRect = notePositions[pos]
+        console.log(`noteRect ${JSON.stringify(noteRect)}`)
+
+        for (i in originalSortedContours) {
+          const staveRect = originalSortedContours[i];
+          console.log(`staveRect ${JSON.stringify(staveRect)}`)
+
+          // Overlap?
+          if (noteRect.y - (noteRect.height / 2) < staveRect.y && noteRect.y + noteRect.height > staveRect.y) {
+            console.log(`*** overlap`)
+            const leftStave = {
+              x: staveRect.x,
+              y: staveRect.y + 10,
+              width: 100, //noteRect.x - staveRect.x - 10,
+              height: staveRect.height
+            };
+            const rightStave = {
+              x: noteRect.x + 10,
+              y: staveRect.y + 10,
+              width: (staveRect.x + staveRect.width - noteRect.x),
+              height: staveRect.height
+            };
+
+            console.log(`adding left ${JSON.stringify(leftStave)}`)
+            sortedContours.push(leftStave);
+            console.log(`adding right ${JSON.stringify(rightStave)}`)
+            sortedContours.push(rightStave);
+          }
+        }
+      }
       //TODO: Make gaps in the horizontal staves where the rectangles are
 
       cv.imshow('canvasOutput', src);
