--- a/index.html
+++ b/index.html
@@ -166,40 +166,54 @@
       max_val = 1
       counter = 0
 
-      let dst2 = new cv.Mat();
 
       let notePositions = []
 
       console.log('3')
-      while (counter < 5) {// && max_val > threshold) { // && counter < 20) {
+
+      let matched = new cv.Mat();
+      cv.matchTemplate(
+        gray,
+        wholeNote2,
+        matched,
+        cv.TM_CCOEFF_NORMED,
+        // mask
+      )
+
+
+      let maxVal = null
+      let minVal = null
+      while (counter < 100) {// && max_val > threshold) { // && counter < 20) {
         counter = counter + 1
 
-        console.log('4')
+        const minMax = cv.minMaxLoc(matched);
+        const x = minMax.maxLoc.x;
+        const y = minMax.maxLoc.y;
 
-        cv.matchTemplate(
-          gray,
-          wholeNote2,
-          dst2,
-          cv.TM_CCOEFF_NORMED,
-          mask
-        )
+        if (maxVal === null) {
+          maxVal = minMax.maxVal;
+        }
+        const value = minMax.maxVal;
+        if (value < maxVal * 0.9) {
+          break;
+        }
 
-        let result = cv.minMaxLoc(dst2, mask)
+        console.info(`max_val ${maxVal}`)
+        console.info(`result ${JSON.stringify(minMax)}`)
 
-        console.log('5')
-        max_val = result.maxVal
-        console.info(`max_val ${max_val}`)
-        console.info(`result ${JSON.stringify(result)}`)
-        // if (max_val > threshold) {
-        let maxPoint = result.maxLoc
-        let point = new cv.Point(maxPoint.x + wholeNote.cols, maxPoint.y + wholeNote.rows)
+        // let maxPoint = result.maxLoc
+        // let point = new cv.Point(maxPoint.x + wholeNote.cols, maxPoint.y + wholeNote.rows)
 
-        notePositions.push({ x: maxPoint.x, y: maxPoint.y, width: wholeNote.cols, height: wholeNote.rows });
+        // notePositions.push({ x: maxPoint.x, y: maxPoint.y, width: wholeNote.cols, height: wholeNote.rows });
 
-        cv.rectangle(gray, maxPoint, point, new cv.Scalar(255, 0, 0, 255), cv.FILLED, cv.LINE_8, 0)
-        cv.rectangle(src, maxPoint, point, new cv.Scalar(255, 0, 0, 255), 3, cv.LINE_8, 0)
-        // }
-        console.log('6')
+        const topLeft = new cv.Point(x, y)
+        const bottomRight = new cv.Point(x + wholeNote2.cols, y + wholeNote2.rows)
+
+        let rect = new cv.Rect(x, y, x + 50, y + 50);
+        cv.rectangle(matched, topLeft, bottomRight, new cv.Scalar(0, 0, 0, 255), cv.FILLED, cv.LINE_8, 0)
+        cv.rectangle(src, topLeft, bottomRight, new cv.Scalar(255, 0, 0, 255), 3, cv.LINE_8, 0)
+
+        // cv.imshow('canvasOutput', matched);
       }
 
       const originalSortedContours = sortedContours
@@ -218,17 +232,18 @@
             console.log(`*** overlap`)
             const leftStave = {
               x: staveRect.x,
-              y: staveRect.y + 10,
+              y: staveRect.y + 5,
               width: 100, //noteRect.x - staveRect.x - 10,
               height: staveRect.height
             };
             const rightStave = {
               x: noteRect.x + 10,
-              y: staveRect.y + 10,
+              y: staveRect.y + 5,
               width: (staveRect.x + staveRect.width - noteRect.x),
               height: staveRect.height
             };
 
+            //TODO: are the staves already around the notes?
             console.log(`adding left ${JSON.stringify(leftStave)}`)
             sortedContours.push(leftStave);
             console.log(`adding right ${JSON.stringify(rightStave)}`)
@@ -238,7 +253,7 @@
       }
       //TODO: Make gaps in the horizontal staves where the rectangles are
 
-      cv.imshow('canvasOutput', src);
+      // cv.imshow('canvasOutput', src);
 
       console.info('3')
 
